[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server that provides RAG (Retrieval-Augmented Generation) capabilities for document querying"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Matteo", email = "andreoni.matteo@proton.me"}
]
keywords = ["mcp", "rag", "retrieval", "augmented", "generation", "llm", "ai"]

dependencies = [
    "mcp>=1.9.2",
    "pydantic>=2.5.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest>=7.0.0",
    "pytest-asyncio",
    "pytest-cov",
    "mypy",
    "ruff",
    "pre-commit",
]
cli = [
    "mcp[cli]",
]

[project.scripts]
rag-mcp-server = "src.server:run_server"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
